--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_dotenv: ^5.1.0
   http: ^1.2.1
+  localstorage: ^5.0.0
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
